# Hatstand

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_JP.md  boot.bat  pyproject.toml  requirements.txt
app/: boot.bat  main.py
src/hatstand/: __init__.py  flet_app.py
src/hatstand/application/: __init__.py  playground_service.py
src/hatstand/backends/: base_backend.py  transformers_backend.py
src/hatstand/core/: __init__.py  benchmark_service.py  chat_features.py  model_registry.py  paths.py  presets.py  session_store.py  telemetry.py
src/hatstand/domain/: __init__.py  dtos.py  entities.py  enums.py
src/hatstand/infra/: json_utils.py  logging_setup.py  settings_repository.py
