[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hatstand"
version = "0.1.0"
description = "Desktop LLM playground for local model evaluation and chat."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "flet",
  "torch>=2.5",
  "transformers>=4.49",
  "accelerate>=1.3",
  "huggingface_hub>=0.30",
  "psutil>=6.0",
]

[project.optional-dependencies]
quant = ["bitsandbytes>=0.45"]
dev = ["pytest>=8.3"]

[project.scripts]
hatstand = "hatstand.flet_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
